--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "Assets/Plugins/UnityIngameDebugConsole"]
 	path = Assets/Plugins/UnityIngameDebugConsole
 	url = https://github.com/yasirkula/UnityIngameDebugConsole
+[submodule "Assets/RemoteLevels"]
+	path = Assets/RemoteLevels
+	url = https://github.com/somedeveloper00/mazerun-levels
