--- a/.gitmodules
+++ b/.gitmodules
@@ -17,7 +17,7 @@
 	path = Assets/RemoteLevels
 	url = https://github.com/somedeveloper00/mazerun-levels
 [submodule "Assets/Plugins/UnityTodo"]
-	path = Assets/Plugins/UnityTodo
+	path = Packages/com.somedeveloper.unitytodo
 	url = https://github.com/somedeveloper00/UnityTodo
 [submodule "Assets/Plugins/PlayerPrefsEditor"]
 	path = Assets/Plugins/PlayerPrefsEditor
